Remove heart emoji from page title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="google-site-verification" content="zJ0f-HiOl7uMB1N3TXzylBorIgJgdbiDlf51KU3wViI" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mahmoud Magdy | Web Developer Portfolio♥️</title>
+  <title>Mahmoud Magdy | Web Developer Portfolio</title>
   <meta name="description" content="Mahmoud Magdy — Web Developer & Designer. View my portfolio, projects, and contact details.">
   <meta name="author" content="Mahmoud Magdy">
 
